# analemma

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  LICENSE  MANIFEST.in  README.md  dollar_dollar.py  equation_of_time.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  sundial.ipynb  sundial_plots.ipynb
.github/workflows/: build-and-publish.yml  publish-notebooks.yml  publish-to-pypi.yml
api_reference/: index.html
docs/: api_reference.md  changelog.md  equation_of_time.ipynb  index.md  orbit_analysis.ipynb  sundial.ipynb  sundial.py  sundial_plots.ipynb
docs/nb/: analemma.ipynb  equation_of_time.ipynb  hour_angle.ipynb  nonzero_gnomon_declination.ipynb  orbit_analysis.ipynb  overview.md  rohr_comparison.ipynb  shadow_angle.ipynb  shadow_length.ipynb  sundial.ipynb  sundial_plots.ipynb  sundial_setup.ipynb  sunrise_and_sunset.ipynb
docs/paper/: RGoyderSundial.tex
docs/ref/: frame_ref.md  geometry_ref.md  orbit_ref.md  plot_ref.md  render_ref.md  result_ref.md  test_geometry_ref.md  test_plot_ref.md  test_results_ref.md  util_ref.md
equation_of_time/: index.html
maple/: kepler.map  sundial.map  sundial_setup.map
res/: favicon.sh  logo.ipynb
scripts/: README.md  build.sh  build_doc.sh  clean.sh  doc_prebuild.sh  dollar_dollar.py  run_tests.sh  setup.sh
search/: search_index.json
src/analemma/: geometry.py  orbit.py  plot.py
src/analemma/algebra/: __init__.py  frame.py  render.py  result.py  util.py
src/analemma/tests/: __init__.py  conftest.py  test_geometry.py  test_orbit.py  test_plot.py  test_results.py
sundial/: index.html
sundial_plots/: index.html
tests/: test_geometry.py  test_plot.py
